# PdfPy

./: .gitignore  Makefile  README.md  __documentation.md  pdfpy.py  pdfpy_system_documentation.md  pyproject.toml  pytest.ini  requirements.txt  run_auto.bat  run_auto.sh  run_manual.bat  run_manual.sh
__tests__/: test_chapter_detection.py  test_config.py  test_manual_processing.py
docs/: __documentation.md
pdfpy/: chapters_config.md  cli.py  core.py  utils.py
scripts/: run_auto.bat  run_auto.sh  run_manual.bat  run_manual.sh
src/pdfpy/: __init__.py  cli.py  utils.py
tests/: test_abstraction_edge_cases.py  test_chapter_detection.py  test_execution.py  test_manual_processing.py  test_scale_and_scanned_processing.py  test_split_logic.py
